--- a/source/_includes/sidebar_bio.html
+++ b/source/_includes/sidebar_bio.html
@@ -1,3 +1,3 @@
 <p class="sidebar-bio">
-  Entrepreneur, Cornell CS grad, <br>Y Combinator and Alphalab alum currently in Pittsburgh, PA.
+  Entrepreneur, developer, designer, <br>Y Combinator and Alphalab alum, currently in Pittsburgh, PA.
 </p>
