--- a/source/_includes/sidebar_bio.html
+++ b/source/_includes/sidebar_bio.html
@@ -1,3 +1,3 @@
 <p class="sidebar-bio">
-  Entrepreneur, developer, designer, <br>Y Combinator and Alphalab alum, currently in Pittsburgh, PA.
+  Entrepreneur, developer, designer, currently in San Francisco, CA.
 </p>
